--- a/GeekShopping.Web/Views/Product/ProductIndex.cshtml
+++ b/GeekShopping.Web/Views/Product/ProductIndex.cshtml
@@ -30,15 +30,23 @@
                 @foreach (var item in Model)
             {
                 <tr>
-                    <th>
+                    <td>
                         @item.Name
-                    </th>
-                    <th>
+                    </td>
+                    <td>
                         @item.CategoryName
-                    </th>
-                    <th>
-                        @item.Price
-                    </th>
+                    </td>
+                    <td>
+                        @((item.Price).ToString("c"))
+                    </td>
+                    <td>
+                        <a asp-action="ProductEdit" class="btn btn-success" asp-route-id="@item.Id">
+                            <i class="fas fa-edit"></i>
+                        </a>
+                        <a asp-action="ProductDelete" class="btn btn-danger" asp-route-id="@item.Id">
+                            <i class="fas fa-trash"></i>
+                        </a>
+                    </td>
                 </tr>
             }
         </tbody>
