Consuming CartAPI via WebApi.Created Entities Cart, and Controllers

--- a/GeekShopping.Web/Views/Home/Details.cshtml
+++ b/GeekShopping.Web/Views/Home/Details.cshtml
@@ -1,6 +1,6 @@
-﻿@model GeekShopping.Web.Models.ProductModel
+﻿@model GeekShopping.Web.Models.ProductViewModel
 
-<form asp-action="post">
+<form method="post">
     <input asp-for="Id" hidden/>
     <div class="pt-4">
         <div class="card container" style="border:1px solid #808080;">
