--- a/GeekShopping.Web/Views/Home/Details.cshtml
+++ b/GeekShopping.Web/Views/Home/Details.cshtml
@@ -43,7 +43,9 @@
             <div class="card-footer row">
                 <div class="col-12 col-md-6 pb-1">
                     <a 
-                        class="btn-primary btn btn-square form-control btn-lg" 
+                        asp-action="Index" 
+                        asp-controller="Home" 
+                        class="btn-primary btn btn-square form-control btn-lg"
                         style="height:50px;"
                     >Back to List</a>
                 </div>
